--- a/startbootstrap-resume-gh-pages 2/index.html
+++ b/startbootstrap-resume-gh-pages 2/index.html
@@ -51,7 +51,7 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Projects</a>
         </li>
 
       </ul>
@@ -74,11 +74,11 @@
             <i class="fab fa-linkedin-in"></i>
           </a>
 
-          <a href="#">
-            <i class="fab fa-twitter"></i>
+          <a href="https://github.com/jphyr4">
+            <i class="fab fa-github-square"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
+          <a href="/Users/jacobpaulhassler/lfz/Portfolio/startbootstrap-resume-gh-pages 2/1:7:20.pdf">
+            <i class="fas fa-external-link-square-alt"></i>
           </a>
         </div>
       </div>
@@ -105,10 +105,10 @@
             Figma, MeisterTask, Chrome Developer Tools</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Agile, VSCode, Slack</li>
+            VSCode, Slack</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Project Management</li>
+            Project Management, Agile</li>
         </ul>
       </div>
     </section>
@@ -184,8 +184,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>I'm a pretty laid back guy who's open to many things. I enjoy simple things such as video games and music, just as much as I love getting out of the house or traveling. I'm very interested in gaming hardware as well as high end-audio equipment.</p>One could refer to me as an "audiophile", if you will. When I'm not spending my time playing video games and listening to music on hardware that's too expensive for my budget, I appreciate spending time with my friends and family doing various different activities.
+        <h2 class="mb-5">Projects</h2>
+        <p>Insert Live Projects Here.
         <p class="mb-0"></p>
       </div>
     </section>
