--- a/portfolioFiles/index.html
+++ b/portfolioFiles/index.html
@@ -187,8 +187,8 @@
       <h2 class="mb-5 col-12">Projects</h2>
         <div class="col-md-4 col-sm-6 col-12">
           <div class="card h-100">
-            <img src="/Users/jacobpaulhassler/lfz/Portfolio/startbootstrap-resume-gh-pages 2/img/openticket.png"
-              class="card-img-top" alt="...">
+            <img src="/Users/jacobpaulhassler/lfz/Portfolio/portfolioFiles/img/openticket.png"
+              class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Open Ticket</h5>
               <p class="card-text">Team-based project management system/bugtracker developed in React.js.
@@ -201,7 +201,7 @@
         </div>
         <div class="col-md-4 col-sm-6 col-12">
           <div class="card h-100">
-            <img src="/Users/jacobpaulhassler/lfz/Portfolio/startbootstrap-resume-gh-pages 2/img/sgt.png" class="card-img-top"
+            <img src="/Users/jacobpaulhassler/lfz/Portfolio/portfolioFiles/img/sgt.png" class="card-img-top"
               alt="...">
             <div class="card-body">
               <h5 class="card-title">Student Grade Table</h5>
@@ -215,7 +215,7 @@
         </div>
         <div class="col-md-4 col-sm-6 col-12">
           <div class="card h-100">
-            <img src="/Users/jacobpaulhassler/lfz/Portfolio/startbootstrap-resume-gh-pages 2/img/memmatch.png"
+            <img src="/Users/jacobpaulhassler/lfz/Portfolio/portfolioFiles/img/memmatch.png"
               class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Memory Match</h5>
